--- a/website/styles/global.css
+++ b/website/styles/global.css
@@ -1,15 +1,5 @@
-:root {
-  :where(code[data-theme] span) {
-    color: var(--shiki-light) !important;
-    background-color: var(--shiki-light-bg) !important;
-    font-style: var(--shiki-light-font-style) !important;
-    font-weight: var(--shiki-light-font-weight) !important;
-    text-decoration: var(--shiki-light-text-decoration) !important;
-  }
-}
-
 .dark {
-  :where(.code[data-theme] span) {
+  :where(.shiki span) {
     color: var(--shiki-dark) !important;
     background-color: var(--shiki-dark-bg) !important;
     font-style: var(--shiki-dark-font-style) !important;
