--- a/website/styles/global.css
+++ b/website/styles/global.css
@@ -1,5 +1,5 @@
 .dark {
-  :where(.shiki span) {
+  :where(.shiki span:not(.highlighted)) {
     color: var(--shiki-dark) !important;
     background-color: var(--shiki-dark-bg) !important;
     font-style: var(--shiki-dark-font-style) !important;
