--- a/website/styles/panda.css
+++ b/website/styles/panda.css
@@ -16,62 +16,22 @@
   }
 }
 
-@layer reset {
-  /*
-1. Remove the margin in all browsers.
-2. Inherit line-height from `html` so users can set them as a class directly on the `html` element.
-*/
-
-  body {
-    line-height: inherit; /* 2 */
+@layer base {
+  :where(.shiki span:not(.highlighted)) {
+    color: var(--shiki-light);
+    /* background-color: var(--shiki-light-bg); */
+    font-style: var(--shiki-light-font-style);
+    font-weight: var(--shiki-light-font-weight);
+    text-decoration: var(--shiki-light-text-decoration);
   }
 
-  /*
-Reset links to optimize for opt-in styling instead of opt-out.
-*/
-
-  a {
-    color: inherit;
-    text-decoration: inherit;
+  .dark {
+    :where(.shiki span:not(.highlighted)) {
+      color: var(--shiki-dark);
+      /* background-color: var(--shiki-dark-bg); */
+      font-style: var(--shiki-dark-font-style);
+      font-weight: var(--shiki-dark-font-weight);
+      text-decoration: var(--shiki-dark-text-decoration);
+    }
   }
-
-  /*
-1. Correct the inability to style clickable types in iOS and Safari.
-2. Remove default button styles.
-*/
-
-  button,
-  [type='button'],
-  [type='reset'],
-  [type='submit'] {
-    background-color: transparent; /* 2 */
-  }
-
-  ol,
-  ul,
-  menu {
-    padding: 0;
-  }
-
-  /*
-Set the default cursor for buttons.
-*/
-
-  button,
-  [role='button'] {
-    cursor: pointer;
-  }
-
-  /*
-Make sure disabled buttons don't get the pointer cursor.
-*/
-  :disabled {
-    cursor: default;
-  }
-
-  /*
-1. Make replaced elements `display: block` by default. (https://github.com/mozdevs/cssremedy/issues/14)
-2. Add `vertical-align: middle` to align replaced elements more sensibly by default. (https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210)
-   This can trigger a poorly considered lint error in some tools but is included by design.
-*/
 }
