--- a/packages/studio/styled-system/styles.css
+++ b/packages/studio/styled-system/styles.css
@@ -87,6 +87,10 @@
 }
 }
 
+  ::selection {
+    background-color: var(--global-color-selection, rgba(0, 115, 255, 0.3));
+}
+
   textarea {
     resize: vertical;
 }
@@ -299,15 +303,18 @@
     --font-sizes-7xl: 4.5rem;
     --font-sizes-8xl: 6rem;
     --font-sizes-9xl: 8rem;
+    --shadows-2xs: 0 1px rgb(0 0 0 / 0.05);
     --shadows-xs: 0 1px 2px 0 rgb(0 0 0 / 0.05);
     --shadows-sm: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
     --shadows-md: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
     --shadows-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
     --shadows-xl: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
     --shadows-2xl: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-    --shadows-inner: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
-    --blurs-sm: 4px;
-    --blurs-base: 8px;
+    --shadows-inset-2xs: inset 0 1px rgb(0 0 0 / 0.05);
+    --shadows-inset-xs: inset 0 1px 1px rgb(0 0 0 / 0.05);
+    --shadows-inset-sm: inset 0 2px 4px rgb(0 0 0 / 0.05);
+    --blurs-xs: 4px;
+    --blurs-sm: 8px;
     --blurs-md: 12px;
     --blurs-lg: 16px;
     --blurs-xl: 24px;
@@ -347,6 +354,8 @@
     --spacing-1\.5: 0.375rem;
     --spacing-2\.5: 0.625rem;
     --spacing-3\.5: 0.875rem;
+    --spacing-4\.5: 1.125rem;
+    --spacing-5\.5: 1.375rem;
     --sizes-0: 0rem;
     --sizes-1: 0.25rem;
     --sizes-2: 0.5rem;
@@ -381,6 +390,8 @@
     --sizes-1\.5: 0.375rem;
     --sizes-2\.5: 0.625rem;
     --sizes-3\.5: 0.875rem;
+    --sizes-4\.5: 1.125rem;
+    --sizes-5\.5: 1.375rem;
     --sizes-xs: 20rem;
     --sizes-sm: 24rem;
     --sizes-md: 28rem;
@@ -733,8 +744,8 @@
     background: var(--colors-neutral-800);
 }
 
-  .gap_10px {
-    gap: 10px;
+  .gap_8px {
+    gap: 8px;
 }
 
   .flex_1 {
