--- a/packages/studio/src/pages/line-heights.astro
+++ b/packages/studio/src/pages/line-heights.astro
@@ -1,20 +1,11 @@
 ---
-import FontTokens from '../components/font-tokens'
+import { LineHeightsPage } from '../components/token-pages'
 import Layout from '../layouts/Layout.astro'
 import Sidebar from '../layouts/Sidebar.astro'
-import * as context from '../lib/panda-context'
-
-const tokens = context.getTokens('lineHeights')
 ---
 
 <Layout>
   <Sidebar title="Line Heights">
-    <FontTokens
-      client:load
-      fontTokens={tokens}
-      token="lineHeight"
-      largeText
-      text={`Panda design system lineHeight specifies the vertical distance between two lines of text. You can peveiew this visually here.`}
-    />
+    <LineHeightsPage client:load />
   </Sidebar>
 </Layout>
