--- a/packages/studio/src/pages/colors.astro
+++ b/packages/studio/src/pages/colors.astro
@@ -1,11 +1,11 @@
 ---
-import Colors from '../components/colors'
+import { ColorsPage } from '../components/token-pages'
 import Layout from '../layouts/Layout.astro'
 import Sidebar from '../layouts/Sidebar.astro'
 ---
 
 <Layout>
   <Sidebar title="Colors">
-    <Colors client:load />
+    <ColorsPage client:load />
   </Sidebar>
 </Layout>
